--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "react": "^18.0.0",
@@ -21,7 +22,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0"
   },
-  "homepage": ".",
+  "homepage": "https://utebi.github.io/invoice-web-app",
   "license": "MIT",
   "browserslist": {
     "production": [
