--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@types/react-dom": "^18.0.0",
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://ryo-1104.github.io/invoice_creative/",
+  "homepage": "",
   "license": "MIT",
   "browserslist": {
     "production": [
